--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
         container_name: letsencrypt
         volumes:
             - /data/scortum-letsencrypt/certs:/certs
+            - /etc/localtime:/etc/localtime:ro
         ports:
             - 80:80 
             - 443:443 
